--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  @apply font-nohemi;
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wdth,wght@12..96,75..100,200..800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap");
 
@@ -27,6 +31,12 @@
 @font-face {
   font-family: "BricolageGrotesque";
   src: url("../public/fonts/BricolageGrotesque-VariableFont_opsz\,wdth\,wght.ttf");
+  font-display: swap;
+  descent-override: 0%;
+}
+@font-face {
+  font-family: "Tiny";
+  src: url("../public/fonts/Tiny5-Regular.ttf");
   font-display: swap;
   descent-override: 0%;
 }
@@ -69,4 +79,11 @@ img {
 
 .bg-noise {
   background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 400 400' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+}
+
+.custom-gradient {
+  background: linear-gradient(90deg, #ccff00 -14.58%, #ffffff 103.63%);
+  -webkit-text-fill-color: transparent !important;
+  background-clip: text;
+  text-fill-color: transparent;
 }
